FIN DE SECCION 13

--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,1 +1,42 @@
-<p>buscar works!</p>
+<div fxLayout="column">
+  <div>
+    <h1>Buscador de Héroes</h1>
+    <mat-divider></mat-divider>
+  </div>
+  <div fxLayout="column">
+    <h3>Buscador</h3>
+
+    <mat-form-field>
+      <mat-label>Seleccione un héroe ...</mat-label>
+      <input type="text"
+             placeholder=""
+             aria-label="Seleccione un héroe ..."
+             matInput
+             [(ngModel)]="termino"
+             [matAutocomplete]="auto"
+             (input)="buscando()">
+      <mat-autocomplete autoActiveFirstOption
+                        #auto="matAutocomplete"
+                        (optionSelected)='opcionSeleccionada($event)'>
+        <!--<mat-option *ngFor="let heroe of heroes" [value]="heroe.superhero" [id]="heroe.id!">-->
+
+        <mat-option *ngFor="let heroe of heroes" [value]="heroe">
+          {{ heroe.superhero }}
+        </mat-option>
+        <mat-option *ngIf="(!heroes || heroes?.length===0) && (termino != '' || termino.trim().length>0)" [value]="">
+          No se encontró nada con el término {{termino}}
+        </mat-option>
+
+      </mat-autocomplete>
+
+    </mat-form-field>
+
+  </div>
+
+  <div>
+    <div>
+      <pre>{{ heroeSeleccionado | json }}</pre>
+    </div>
+  </div>
+
+</div>
