--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,95 @@
-<p>agregar works!</p>
+<h1>{{(heroe.id)?'Editar':'Nuevo'}} Héroe <small>{{heroe.superhero}}</small></h1>
+
+<div fxLayout="row"
+     fxLayoutGap="40px"
+     fxLayout.xs="column">
+
+    <div fxFlex="50" fxLayout="column">
+
+      <div fxLayout="row"
+           fxLayout.sm="column"
+           fxLayout.xs="column"
+           fxLayoutGap="20px">
+
+        <mat-form-field fxFlex="100" fxLayout.sm="column" fxLayout.xs="column">
+          <mat-label>Super Héroe</mat-label>
+          <input matInput
+                  type="text"
+                  [(ngModel)]="heroe.superhero"
+                  required>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+          <mat-label>Alter ego</mat-label>
+          <input matInput
+                 type="text"
+                 [(ngModel)]="heroe.alter_ego"
+                 required>
+        </mat-form-field>
+
+      </div>
+
+      <mat-form-field>
+        <mat-label>Primera Aparición</mat-label>
+        <input matInput
+               type="text"
+               [(ngModel)]="heroe.first_appearance"
+               required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Personajes</mat-label>
+        <input matInput
+               type="text"
+               [(ngModel)]="heroe.characters"
+               required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Creador</mat-label>
+        <mat-select [(ngModel)]="heroe.publisher"
+                    required>
+          <mat-option [value]="">Seleccione un creador...</mat-option>
+          <mat-option *ngFor="let publisher of publishers"
+                      [value]="publisher.id">
+            {{ publisher.desc }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Foto Url</mat-label>
+        <input matInput
+               type="url"
+               [(ngModel)]="heroe.alt_img"
+               required>
+      </mat-form-field>
+
+      <br>
+
+      <div fxLayout>
+
+        <button mat-raised-button
+                color="primary"
+                (click)="guardar()">
+          <mat-icon>save</mat-icon>
+          {{(heroe.id)?'Actualizar':'Crear'}}
+        </button>
+        <span class="spacer"></span>
+        <button mat-raised-button
+                *ngIf="heroe.id"
+                color="warn"
+                (click)="eliminar()">
+          <mat-icon>remove</mat-icon>
+          Eliminar
+        </button>
+
+      </div>
+
+    </div>
+
+    <div fxFlex="50">
+      <img [src]="heroe | imagen">
+    </div>
+
+</div>
