FIN SECCION 15-PROTECCION DE RUTAS

--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -46,8 +46,13 @@
       (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
+
     <span class="spacer"></span>
-    <button mat-button>
+
+    <span>{{ auth.usuario }}</span>
+
+    <button mat-button
+            (click)="logout()">
       Logout
     </button>
 
